
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 scalar_t__ ftp_pid ;
 int kill (scalar_t__,int) ;
 int printf (char*,...) ;

void printe(char *err,short e){
 printf("[!] %s\n",err);
 if(e){

  if(ftp_pid)
   kill(ftp_pid,9);
  printf("[!] exploit failed.\n");
  exit(1);
 }
 return;
}
